--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,26 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-a {
-  color: #00B7FF;
+.inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+label[for]{
+  cursor: pointer; /* "hand" cursor */
+}
+.label-primary{
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+.label-primary:hover{
+  color: #fff;
+  background-color: #0069d9;
+  border-color: #0062cc;
 }
