--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,11 @@
-!!! 5
+doctype html
 html
   head
     title= title
     script(src='/js/jquery.js')
     script(src='/js/popper.min.js')
     script(src='/js/bootstrap.min.js')
+    script(src='/javascript/function.js')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
