--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,12 +4,13 @@
 }
 
 .inputfile {
-  width: 0.1px;
-  height: 0.1px;
-  opacity: 0;
-  overflow: hidden;
   position: absolute;
-  z-index: -1;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  opacity: 0;
 }
 label[for]{
   cursor: pointer; /* "hand" cursor */
@@ -23,4 +24,23 @@ label[for]{
   color: #fff;
   background-color: #0069d9;
   border-color: #0062cc;
+}
+.p-file{
+  display: block;
+  height: calc(1.5em + .75rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  flex: 1 1 auto;
+  width: 1%;
+  margin-bottom: 0;
+  overflow: hidden;
+}
+#progress-bar{
+  transition: width .1s linear;
 }
