--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
         p(class='p-file') No song
         div(class='input-group-append')
           label(class='input-group-text label-primary', for='file') Choose a file
-    audio(preload="auto", id="myAudio")
+
     button(class='btn btn-primary', id='play') Play/Pause
     br
     br
@@ -20,8 +20,13 @@ block content
       div(class="progress-bar progress-bar-striped progress-bar-animated", id="progress-bar")
     br
     label(for='soundRange') Sound Control
-    input(type="range", class="custom-range", id="soundRange", min="0", max="50" step="0.5") 
+    input(type="range", class="custom-range", id="soundRange", min="0", max="50" step="0.5")
     br
     br
     button(class='btn btn-secondary', id='mute') Mute
+    - var n = 0
+    - var i = 0
+    div
+      while n < 1024
+        div(class='bar', id='bar-#{n+=1}', style='--offset: #{i++};')
   script(src='/javascripts/function.js')
