--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,11 +46,11 @@ label[for]{
 }
 .bar{
   position: fixed;
-  width: 0.09765625%;
-  /* width: 3.125%; */
+  /* width: 0.09765625%; */
+  width: 3.125%;
   bottom: 0;
-  /* left: calc(var(--offset) * 3.125%); */
-  left: calc(var(--offset) * 0.09765625%);
+  left: calc(var(--offset) * 3.125%);
+  /* left: calc(var(--offset) * 0.09765625%); */
   background-color: red;
   /* height: 100px; */
 }
