--- a/views/index.jade
+++ b/views/index.jade
@@ -29,4 +29,6 @@ block content
     div
       while n < 1024
         div(class='bar', id='bar-#{n+=32}', style='--offset: #{i++};')
+
+   div(style='position:fixed;top:5px;left:5px;', id="timer")
   script(src='/javascripts/function.js')
